# ckanext-searchterms

./: .gitignore  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: CI.yml  test.yml
ckanext/searchterms/: click.py  command.py  constants.py  implementations.py  indexes.py  interfaces.py  jobs.py  plugin.py  uploader.py  util.py
ckanext/searchterms/templates/snippets/: custom_form_fields.html
ckanext/searchterms/tests/: mockplugin.py  test_plugin.py  test_util.py
docs/source/: conf.py  index.md
