[project]
name = "ckanext-searchterms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.entry-points."ckan.plugins"]
searchterms="ckanext.searchterms.plugin:SearchtermsPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ckanext"]